# toad

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE.txt  Makefile  README.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug-report.md  meta.md  new-feature-.md  new-feature.md
.github/workflows/: compile-and-release.yml  release-please.yml
croak/: Cargo.toml
croak/datasets/: sample.txt
croak/src/: main.rs  parameters.rs
release-please/: release-please-config.json
src/: cli.rs  depth.rs  engine.rs  eval.rs  game.rs  history.rs  lib.rs  main.rs  movepicker.rs  psqt.rs  score.rs  search.rs  ttable.rs  tune.rs  utils.rs
src/board/: bitboard.rs  game.rs  movegen.rs  moves.rs  perft.rs  piece.rs  position.rs  prng.rs  square.rs  table.rs  utils.rs  zobrist.rs
tests/: perft.rs  standard.epd
toad/: Cargo.toml  README.md
toad/src/: cli.rs  depth.rs  engine.rs  eval.rs  game.rs  history.rs  lib.rs  main.rs  movepicker.rs  score.rs  search.rs  ttable.rs  tune.rs  tuned_eval_params.rs  utils.rs
toad/src/board/: bitboard.rs  magics.rs  movegen.rs  moves.rs  perft.rs  piece.rs  position.rs  prng.rs  square.rs  table.rs  zobrist.rs
toad/tests/: perft.rs
