[workspace]
members = ["toad"]
resolver = "2"
name = "toad-chess"
version = "2.0.0"
edition = "2021"
authors = ["Danny Hammer <hammerapi@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/dannyhammer/toad"
homepage = "https://github.com/dannyhammer/toad"
keywords = ["chess", "chess-engine", "uci"]

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1
overflow-checks = true